updated to nextjs 10

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,18 +1,20 @@
 import { NextSeo } from 'next-seo';
-import Layout from '../components/Layout';
+import LayoutMdx from '../components/LayoutMdx';
 
-<Layout>
+<LayoutMdx>
   <NextSeo
     title="About Kickoff NextJs"
     description="A short description goes here."
   />
 
-  # About
 
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vehicula vehicula urna id fermentum. Suspendisse vel urna mauris. Donec pretium leo sem, in venenatis nibh venenatis sit amet. Nunc placerat ultrices velit sit amet malesuada. Donec pellentesque, erat sed dignissim ultricies, velit orci blandit nisl, eu varius arcu ante luctus lacus. Morbi a purus vitae elit imperdiet facilisis a a elit. Mauris eu ante eget tortor rhoncus elementum sit amet id tortor. Sed scelerisque nulla lacus, sed dictum mauris hendrerit at. Sed ut urna leo. Aenean suscipit iaculis pharetra. Proin vel imperdiet neque, eget efficitur mi. Nulla eget purus vitae urna vestibulum sagittis. Pellentesque finibus rhoncus velit a molestie.
+# About
 
-  Phasellus semper est dui, in iaculis eros rutrum a. Cras gravida elementum nisi. Nam tincidunt urna vitae nibh cursus aliquet. Etiam feugiat, ex nec ornare tincidunt, enim mi volutpat quam, non ultricies enim risus eget lacus. Maecenas eget facilisis nunc, eget ultrices lacus. Pellentesque ac felis sed metus ultricies euismod. Cras gravida erat vel metus dapibus, sit amet laoreet lorem maximus. Aliquam eget lorem risus.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vehicula vehicula urna id fermentum. Suspendisse vel urna mauris. Donec pretium leo sem, in venenatis nibh venenatis sit amet. Nunc placerat ultrices velit sit amet malesuada. Donec pellentesque, erat sed dignissim ultricies, velit orci blandit nisl, eu varius arcu ante luctus lacus. Morbi a purus vitae elit imperdiet facilisis a a elit. Mauris eu ante eget tortor rhoncus elementum sit amet id tortor. Sed scelerisque nulla lacus, sed dictum mauris hendrerit at. Sed ut urna leo. Aenean suscipit iaculis pharetra. Proin vel imperdiet neque, eget efficitur mi. Nulla eget purus vitae urna vestibulum sagittis. Pellentesque finibus rhoncus velit a molestie.
 
-  Vivamus eget justo pharetra, elementum lacus et, tincidunt leo. Sed mi felis, tempus quis auctor sit amet, fermentum non neque. Donec eu volutpat mi. Nunc sollicitudin elit mi, in efficitur urna porttitor ut. Vivamus sit amet diam in metus varius convallis. Fusce porta aliquam elit, non mollis libero elementum id. Nunc euismod posuere arcu, nec consequat nibh congue ut. Morbi mollis augue ac diam consequat, a tincidunt odio fermentum. Donec pharetra condimentum dictum. Nullam vitae semper nibh. Sed tempor a nulla nec hendrerit.
+Phasellus semper est dui, in iaculis eros rutrum a. Cras gravida elementum nisi. Nam tincidunt urna vitae nibh cursus aliquet. Etiam feugiat, ex nec ornare tincidunt, enim mi volutpat quam, non ultricies enim risus eget lacus. Maecenas eget facilisis nunc, eget ultrices lacus. Pellentesque ac felis sed metus ultricies euismod. Cras gravida erat vel metus dapibus, sit amet laoreet lorem maximus. Aliquam eget lorem risus.
 
-</Layout>
+Vivamus eget justo pharetra, elementum lacus et, tincidunt leo. Sed mi felis, tempus quis auctor sit amet, fermentum non neque. Donec eu volutpat mi. Nunc sollicitudin elit mi, in efficitur urna porttitor ut. Vivamus sit amet diam in metus varius convallis. Fusce porta aliquam elit, non mollis libero elementum id. Nunc euismod posuere arcu, nec consequat nibh congue ut. Morbi mollis augue ac diam consequat, a tincidunt odio fermentum. Donec pharetra condimentum dictum. Nullam vitae semper nibh. Sed tempor a nulla nec hendrerit.
+
+</LayoutMdx>
+
